Awesome page added

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
+<!DOCTYPE html>
 <html>
-    <head>
-    <script src="mySketch.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.0/p5.js"></script>
-    </head>
-<body>
-</body>
-
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
+    <script src="addons/p5.dom.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Handlee|Oxygen:400,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
+  <style> body {padding: 40px; margin: 10px; align-content: center;} </style>
+  </head>
+  <body>
+  <script src="mySketch.js"></script>
+  <h1 style="font-family: 'Oxygen', sans-serif; font-size:40px; color:#FFF;">What if Pixar and GoPro had a child? Won't it be AAAWESOME.</h1>
+  <h2 style="font-family: 'Handlee', cursive; color:#FFF">AAAWESOME is a new camera company using a lot of cutting-edge technology to make even more awesome.</h2>
+      <h3 style="font-family: Arial; font-size:20px; color:#FFF"></h3>
+      <p style="font-family: 'Handlee', cursive; color:#FFF">Another Akshay Jirage Project after www.artmarq.com</p>
+  </body>
 </html>
