--- a/index.html
+++ b/index.html
@@ -1,19 +1,63 @@
 <!DOCTYPE html>
 <html>
   <head>
+	<meta charset="utf-8">
+	<meta name="description" content="Camera company for 21st century.">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="apple-itunes-app" content="app-id=1077299956"/>
+    <title>aaawesome</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
     <script src="addons/p5.dom.js"></script>
+    <script src="https://use.fontawesome.com/76f357c983.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Handlee|Oxygen:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="devices.css">
+     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+     
   <style> body {padding: 40px; margin: 10px; align-content: center;} </style>
   </head>
   <body>
-  <script src="mySketch.js"></script>
-  <h1 style="font-family: 'Oxygen', sans-serif; font-size:40px; color:#FFF;">What if Pixar and GoPro had a child? Won't it be AAAWESOME.</h1>
-  <h2 style="font-family: 'Handlee', cursive; color:#FFF">AAAWESOME is a new camera company using a lot of cutting-edge technology to make even more awesome.</h2>
-      <h3 style="font-family: Arial; font-size:20px; color:#FFF"></h3>
-      <p style="font-family: 'Handlee', cursive; color:#FFF">Another Akshay Jirage Project after www.artmarq.com</p>
+  <header>
+  <div class="container-lrg flex">
+  <div class="col-6 spread">
+      <h1 style="font-family: 'Oxygen', sans-serif; font-size:72px; color:#FFF; margin-top: 10%">What if</br>Pixar meets GoPro. <a href="lenses.html"><i class="em em-couplekiss"></i></a></h1>
+      </div>
+      <div class="col-6 sidedevices">
+          <div class="iphoneipad">
+            <div class="iphone">
+              <div class="mask">
+                <img class="mask-img" src="mobileapp.svg" alt="mobileapp">
+              </div>
+            </div>
+            <div class="ipad">
+              <div class="mask">
+                <img class="mask-img" src="webapp.svg">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+     </header>
+  <script src="aaa.js"></script>
+      <div class="float-background footer-nav flex">
+        <div class="col-6 vertical">
+          <a href="#" style="color:#000">
+          <h3>aaawesome</h3>
+          </a>
+          <a class="nav-link2">
+            <p><small>©2017 fancy new 'aaawesome' by Akshay Jirage.</small></p>
+          </a>
+        </div>
+        <div class="col-6 vertical right">
+          <a class="nav-link2" href="">
+            <i class="fa fa-snapchat-square fa-2x" aria-hidden="true"></i> Snapchat
+          </a>
+          <a class="nav-link2" href=""><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> Facebook
+          </a>
+        </div>
+      </div>
   </body>
 </html>
