Mobile page redirect added

--- a/mobile.html
+++ b/mobile.html
@@ -6,13 +6,8 @@
     <meta name="description" content="Camera company for 21st century.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="apple-itunes-app" content="app-id=1077299956" />
     <title>aaawesome</title>
-    <script type="text/javascript">
-        if (screen.width <= 699) {
-            document.location = "mobile.html";
-        }
-
-    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
@@ -37,38 +32,18 @@
     <header>
         <div class="container-lrg flex">
             <div class="col-6 spread">
-                <h1 style="font-family: 'Oxygen', sans-serif; font-size:72px; color:#FFF; margin-top: 10%">What if</br>Pixar meets GoPro. <a href="lenses.html"><i class="em em-couplekiss"></i></a></h1>
-            </div>
-            <div class="col-6 sidedevices">
-                <div class="iphoneipad">
-                    <div class="iphone">
-                        <div class="mask">
-                            <img class="mask-img" src="mobileapp.svg" alt="mobileapp">
-                        </div>
-                    </div>
-                    <div class="ipad">
-                        <div class="mask">
-                            <img class="mask-img" src="webapp.svg">
-                        </div>
-                    </div>
-                </div>
+                <h1 class="shadow" style="font-family: 'Oxygen', sans-serif; font-size:62px; color:#FFF; margin-top: 20%">What if</br>Pixar meets GoPro. <a href="lenses.html"><i class="em em-couplekiss"></i></a></h1>
             </div>
         </div>
     </header>
     <script src="aaa.js"></script>
-    <div class="float-background footer-nav flex">
-        <div class="col-6 vertical">
-            <a href="#" style="color:#000">
-                <h3>aaawesome</h3>
-            </a>
-            <a class="nav-link2">
-                <p><small>©2017 fancy new 'aaawesome' by Akshay Jirage.</small></p>
-            </a>
-        </div>
-        <div class="col-6 vertical right">
+    <div class="m-float-background footer-nav flex">
+        <div class="col-6">
             <a class="nav-link2" href="">
                 <i class="fa fa-snapchat-square fa-2x" aria-hidden="true"></i> Snapchat
             </a>
+        </div>
+        <div class="col-6">
             <a class="nav-link2" href=""><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> Facebook
           </a>
         </div>
