Added Facemoji app

--- a/mobile.html
+++ b/mobile.html
@@ -32,7 +32,7 @@
     <header>
         <div class="container-lrg flex">
             <div class="col-6 spread">
-                <h1 class="shadow" style="font-family: 'Oxygen', sans-serif; font-size:62px; color:#FFF; margin-top: 20%">What if</br>Pixar meets GoPro. <a href="lenses.html"><i class="em em-couplekiss"></i></a></h1>
+                <h2 class="shadow-blue" style="font-family: 'Oxygen', sans-serif; font-size:62px; color:#FFF; margin-top: 20%">What if</br>Pixar meets GoPro. <a href="lenses.html"><i class="em em-couplekiss"></i></a></h2>
             </div>
         </div>
     </header>
