--- a/client-ind/environment.html
+++ b/client-ind/environment.html
@@ -12,8 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <link rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
 <body>
@@ -33,8 +32,8 @@
                 </nav>
             </div>
         </div>
-         <div id="sectionEnv" class="feature5" style="background: #112131; color: #63b32e">
-             <div class="container-sml flex">
+        <div id="sectionEnv" class="feature5" style="background: #112131; color: #63b32e">
+            <div class="container-sml flex">
                 <div style="display: block; text-align: center;" class="col-12">
                     <div class="animated rotateIn"><img src="img/recyclable.svg" width="auto" height="160px" alt="50% more storage"></div>
                     <h3 class="subheading">100% Recyclable</h3>
@@ -50,7 +49,7 @@
                     <h3 class="subheading">Trouble-free recycling</h3>
                 </div>
             </div>
-        </div>    
+        </div>
 
         <div class="col-12">
             <hr class="border1">
@@ -76,16 +75,14 @@
                         </p>
                     </div>
                 </div>
+                <div>
+                    <div class="col-12 centervertical animated pulse">
+                        <img src="img/green-trees.svg" width="100%" height="auto" alt="Green Trees">
+                    </div>
+                </div>
             </div>
         </div>
-         <div class="animated pulse">
-              <div  id="element-for-environment">
-                    <div id="back-environment" class="animated infinite pulse">
-                    <img src="img/green-trees.svg" width="100%" height="auto" alt="Green Trees">
-                    </div>
-                    <img src="img/grey-trees.svg" width="100%" height="auto" alt="Trees">
-                </div>   
-                </div> 
+
 
 
         <div style="background-color: #63b32e" class="footer">
