--- a/client-ind/logistics.html
+++ b/client-ind/logistics.html
@@ -12,8 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <link rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
 <body>
@@ -34,7 +33,7 @@
             </div>
         </div>
         <div class="spacer" style="width: auto; height: 100px;"></div>
-         
+
         <div id="slide-show-3" class="feature-5 container-lrg" style="background: #112131; color: #63b32e;">
             <div class="spacer" style="width: auto; height: 100px;"></div>
             <div class="owl-carousel owl-theme">
@@ -86,16 +85,11 @@
                 </div>
             </div>
         </div>
-        <div class="spacer" style="width: auto; height: 100px;"></div>
-        <div class="col-12">
-            <hr class="border1">
-        </div>
-
 
         <div id="" class="container-sml flex feature5">
             <div class="row">
                 <div class="col-12 centervertical">
-                    <h1 class="heading text-center">
+                    <h1 class="subheading text-center">
                         Redesigned packaging can reduce your shipping costs</h1>
                     <div class="spacer" style="width: auto; height: 40px;"></div>
 
@@ -106,15 +100,13 @@
                 </div>
                 <div class="col-12 centervertical">
                     <div style="display: block; text-align: center;">
-                        <img src="img/smart-packaging.png" width="360px" height="auto" alt="Smart Packaging">
+                        <img src="img/smart-packaging.png" width="500px" height="auto" alt="Smart Packaging">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-12">
-            <hr class="border1">
-        </div>
-        <div id="section1" class="feature5" style="background: #112131; color: #63b32e">
+
+        <div id="section3" class="feature5" style="background: #112131; color: #63b32e">
             <div class="spacer" style="width: auto; height: 60px;"></div>
             <div class="container-sml flex">
                 <div style="display: block; text-align: center;" class="col-6">
@@ -181,7 +173,7 @@
                 $('.owl-carousel').owlCarousel({
                     loop: true,
                     autoplay: true,
-                    autoplayTimeout: 10000,
+                    autoplayTimeout: 8000,
                     autoplayHoverPause: false,
                     center: true,
                     nav: true,
@@ -189,21 +181,6 @@
                     margin: 30,
                     stagePadding: 30
                 });
-            });
-
-        </script>
-        <!-- Menu Scroll -->
-        <script type="text/javascript">
-            jQuery('a[href^="#"]').click(function(e) {
-
-                jQuery('html,body').animate({
-                    scrollTop: jQuery(this.hash).offset().top
-                }, 1000);
-
-                return false;
-
-                e.preventDefault();
-
             });
 
         </script>
