--- a/client-ind/about.html
+++ b/client-ind/about.html
@@ -30,13 +30,13 @@
             </div>
         </div>
 
-        <div id="section3" class="feature5">
-            <div class="col-12" style="text-align: center">
-                <img src="img/aout-us.svg" width="100%" height="100%" alt="Environment">
+        <div id="section1" class="feature5">
+            <div class="col-12" style="text-align: right">
                 <button class="ctas-button my_popup_open" width="160px"><h2>Director's Message</h2></button>
+                <img src="img/about-us.svg" width="100%" height="auto" alt="Environment">
             </div>
             <div id="my_popup">
-                <div style="background: #FFF; padding: 30px 10px 30px 10px; border-radius: 6px;" class="container-sml flex">
+                <div style="background: #FFF; padding: 100px 60px 100px 60px; border-radius: 6px;" class="container-sml flex">
                     <div class="col-12">
                         <div style="display: block; text-align: left;"><img src="img/indmark.png" width="auto" height="60px" alt="Indmark">
                             <p style="color: #63b32e">Exceeding Sustainability</p>
@@ -58,7 +58,9 @@
                     </div>
                 </div>
             </div>
-            <div class="container-sml">
+        </div>
+        <div id="section2" class="feature5" style="background:#112131; color: #63b32e">
+        <div class="container-sml">
                 <div class="col-12">
                     <h3 class="heading text-center">
                         About Us
@@ -69,14 +71,14 @@
 
                             With distinctive, proficient methodologies and object-oriented task force, Indmark has continually surpassed service expectations, making it the house of choice for sterling associates such as Larsen & Toubro, Reliance, Suzlon, TATA Projects and numerous others. Being certified with ISO 9001 :2008 and Dun & Bradstreet Global Database, We bring an indigenous interpretation to streamline the quality of all important aspects of our products, right from the raw material resources, product preparation and procedure execution- towards the enhancement of our extensive product range.
                         </p>
-
-                    </div>
+                        <img src="img/green-trees.svg" width="100%" height="auto" alt="Environment">
+                    </div>  
                 </div>
             </div>
-        </div>
+</div>
 
 
-        <div style="background-color: #63b32e" class="footer">
+        <div style="background-color: #63b32e; color: #112131" class="footer">
             <div class="container-sml flex text-center">
                 <div class="col-12">
                     <h3 class="heading">
