--- a/client-ind/contact.html
+++ b/client-ind/contact.html
@@ -29,11 +29,9 @@
                 </nav>
             </div>
         </div>
-
-        <div id="section4" class="socialproof">
-            <div class="container-sml">
-                <div class="row header">
-                    <h1>CONTACT US &nbsp;</h1>
+        <div id="section1">
+        <div class="feature5 header" style="background: #112131; color: #63b32e">
+                   <div class="container-lrg" style="text-align: center;"><h1>CONTACT US &nbsp;</h1>
                     </br>
                     <p>INDMARK PAPERFORM PVT. LTD.</br>
                         307/10, Nanekarwadi, Chakan MIDC</br>
@@ -43,9 +41,12 @@
                         Contact No: +91 74474 15802</br>
                         Email: Indmarkpaperform@gmail.com</p>
                     </br>
-                    <h3>Leave us your message and we will get back to you ASAP.</h3>
-
+                    <h3>Leave us your message and we will get back to you ASAP.</h3></div>
                 </div>
+</div>
+
+        <div id="section2" class="socialproof">
+            <div class="container-sml">
                 <div class="row body">
                     <form action="mailto:indmarkpaperform@gmail.com">
                         <ul>
@@ -86,7 +87,7 @@
             </div>
         </div>
 
-        <div style="background-color: #63b32e" class="footer">
+        <div style="background-color: #63b32e; color: #112131" class="footer">
             <div class="container-sml flex text-center">
                 <div class="col-12">
                     <h3 class="heading">Save Space, Save Earth with Indmark's Eco-Friendly Packaging</h3>
