--- a/client-ind/index.html
+++ b/client-ind/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="spacer" style="width: auto; height: 20px;"></div>
             <div class="container-lrg flex text-center">
-                <div class="col-12">
+                <div class="col-12" style="color: #112131">
                     <h2 class="animated fadeInUpBig subheading">Smart Packaging to reduce your logistics cost and improve the safety</h2>
                 </div>
             </div>
@@ -67,14 +67,12 @@
 
 
         <div id="section01">
-            <div class="spacer" style="width: auto; height: 100px; text-align: center;"></div>
-            <div id="slide-show-1">
+             <div id="slide-show-1" style="background: #112131; color: #63b32e; border: 0px solid #fff" class="container-lrg">
                 <div class="owl-carousel owl-theme">
-                    <div id="slide1" style="background-image: url('img/home-banner-1.svg'); background-position: center; background-size: cover; background-repeat: no-repeat; padding: 10px; color: #63b32e;" class="container-sml flex">
+                    <div id="slide1" class="container-sml flex" style="padding-top: 40px">
                         <div class="col-1"></div>
                         <div class="col-6 centervertical">
-                            <h3 class="subheading">
-                                <small>100% recyclable, bio degradable </br>and environment friendly</small>
+                            <h3 class="subheading">100% recyclable, bio degradable </br>and environment friendly
                             </h3>
                         </div>
                         <div class="col-4 offset-col-2 centervertical">
@@ -83,51 +81,50 @@
                         <div class="col-1"></div>
                     </div>
 
-                    <div id="slide2" style="background-image: url('img/home-banner-2.svg'); background-position: center; background-size: cover; background-repeat: no-repeat; padding: 10px; color: #63b32e;" class="container-sml flex">
+                    <div id="slide2" style="padding-top: 40px" class="container-sml flex">
                         <div class="col-1"></div>
+                        <div class="col-6 centervertical">
+                            <h3 class="subheading">Optimum consumption</br>of space
+                            </h3>
+                        </div>
                         <div class="col-4 centervertical">
                             <img src="img/compact.png" width="100px" height="auto" alt="Optimum consumption of space">
                         </div>
-                        <div class="col-6 centervertical">
-                            <h3 class="subheading"><small>Optimum consumption</br>of space</small>
-                            </h3>
-                        </div>
                         <div class="col-1"></div>
                     </div>
 
-                    <div id="slide3" style="background-image: url('img/home-banner-3.svg'); background-position: center; background-size: cover; background-repeat: no-repeat; padding: 10px; color: #63b32e;" class="container-sml flex">
+                    <div id="slide3" style="padding-top: 40px" class="container-sml flex">
                         <div class="col-1"></div>
+                        <div class="col-6 centervertical">
+                            <h3 class="subheading">Cost-effective delivery </br>and sustainability
+                            </h3>
+                        </div>
                         <div class="col-4 centervertical">
                             <img src="img/cost-effective.png" width="100px" height="auto" alt="Cost-effective delivery sustainability">
                         </div>
-                        <div class="col-6 centervertical">
-                            <h3 class="subheading" style="color: #112131"><small>Cost-effective delivery </br>and sustainability</small>
-                            </h3>
-                        </div>
                         <div class="col-1"></div>
                     </div>
 
-                    <div id="slide4" style="background-image: url('img/home-banner-4.svg'); background-position: center; background-size: cover; background-repeat: no-repeat; padding: 10px; color: #63b32e;" class="container-sml flex">
+                    <div id="slide4" style="padding-top: 40px" class="container-sml flex">
                         <div class="col-1"></div>
                         <div class="col-6 centervertical">
                             <h3 class="subheading">
-                                <small>Supreme strength and stability</small>
+                            Supreme strength and stability
                             </h3>
                         </div>
-
                         <div class="col-4 centervertical">
                             <img src="img/pallet-capacity.png" width="100px" height="auto" alt="Supreme strength and stability">
                         </div>
                         <div class="col-1"></div>
                     </div>
-                    <div id="slide5" style="background-image: url('img/home-banner-5.svg'); background-position: center; background-size: cover; background-repeat: no-repeat; padding: 10px; color: #63b32e;" class="container-sml flex">
+                    
+                    <div id="slide5" style="padding-top: 40px" class="container-sml flex">
                         <div class="col-1"></div>
                         <div class="col-6 centervertical">
                             <h3 class="subheading">
-                                <small>Extensive range in sizes of </br>Square Fibre drums</small>
+                            Extensive range in sizes of </br>Square Fibre drums
                             </h3>
                         </div>
-
                         <div class="col-4 centervertical">
                             <img src="img/extensive-range.png" width="100px" height="auto" alt="Extensive range for various bulk materials">
                         </div>
@@ -135,8 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div class="spacer" style="width: auto; height: 100px;"></div>
-        </div>
+         </div>
 
         <div id="section02">
             <div class="col-12">
@@ -149,14 +145,14 @@
                             <img src="img/square-fiber-drums.png" width="260px" height="auto" alt="Square Fiber Drums">
                         </div>
                     </div>
-                    <div class="col-12 centervertical">
+                    <div class="col-12 centervertical" style="color: #112131">
                         <h3 class="heading text-center">
                             <b>Square Fiber Drums</b>
                         </h3>
                         <div class="paragraph">
-                            <p><small>When it comes to packing and delivery, an extensive variety of products from Pharmaceutical, Fine Chemical, Agro Chemical and Food industry currently depend on traditional round or cylindrical drums in paper or metal. This conventional medium of packing is restricted in terms of space utility and environmental sustainability.</br></br>
+                            <p>When it comes to packing and delivery, an extensive variety of products from Pharmaceutical, Fine Chemical, Agro Chemical and Food industry currently depend on traditional round or cylindrical drums in paper or metal. This conventional medium of packing is restricted in terms of space utility and environmental sustainability.</br></br>
 
-Indmark Paperform has devised an innovative packing solution through our Square Fiber Drums. Wholly recyclable and bio-degradable, these environment-friendly drums assure optimum consumption of storage space, thereby providing the most cost-effective delivery sustainability. With our in-house laboratory and testing unit, Indmark’s Square Fiber Drums are deliberated in strict conformation with international quality standards.</small></p>
+Indmark Paperform has devised an innovative packing solution through our Square Fiber Drums. Wholly recyclable and bio-degradable, these environment-friendly drums assure optimum consumption of storage space, thereby providing the most cost-effective delivery sustainability. With our in-house laboratory and testing unit, Indmark’s Square Fiber Drums are deliberated in strict conformation with international quality standards.</p>
                         </div>
                     </div>
                 </div>
@@ -166,78 +162,77 @@ Indmark Paperform has devised an innovative packing solution through our Square 
             <div class="col-12">
                 <hr class="border1">
             </div>
-            <div class="spacer" style="width: auto; height: 60px;"></div>
-            <div id="slide-show-2" style="border: 0px solid #fff" class="container-lrg">
+             <div id="slide-show-2" style=" background: #112131; color: #63b32e; border: 0px solid #fff" class="container-lrg">
                 <div class="spacer" style="width: auto; height: 40px;"></div>
 
                 <div class="owl-carousel owl-theme">
-                    <div id="slide11" style="background-image: url('img/home-banner-2.1.svg'); background-position: center; background-size: cover; background-repeat: no-repeat; padding: 10px;" class="container-sml flex">
+                    <div id="slide11" class="container-sml flex">
                         <div class="col-1"></div>
                         <div class="col-4 centervertical">
                             <img src="img/hassle-free.svg" width="100px" height="auto" alt="Hassle-free handling">
                         </div>
                         <div class="col-6 centervertical">
-                            <h3 style="color: #ffffff" class="heading">
+                            <h3 class="heading">
                                 Hassle-free handling
                             </h3>
                         </div>
                         <div class="col-1"></div>
                     </div>
-                    <div id="slide12" style="background-image: url('img/home-banner-2.2.svg'); background-position: center; background-size: cover; background-repeat: no-repeat; padding: 10px; color: #63b32e;" class="container-sml flex">
+                    <div id="slide12" class="container-sml flex">
                         <div class="col-1"></div>
                         <div class="col-4 centervertical">
                             <img src="img/easy-feeling.svg" width="100px" height="auto" alt="Optimum consumption of space">
                         </div>
                         <div class="col-6 centervertical">
-                            <h3 style="color: #ffffff" class="heading">
+                            <h3 class="heading">
                                 Easy filling and emptying
                             </h3>
                         </div>
                         <div class="col-1"></div>
                     </div>
-                    <div id="slide13" style="background-image: url('img/home-banner-2.3.svg'); background-position: center; background-size: cover; background-repeat: no-repeat; padding: 10px;" class="container-sml flex">
+                    <div id="slide13" class="container-sml flex">
                         <div class="col-1"></div>
                         <div class="col-4 centervertical">
                             <img src="img/handhole.svg" width="100px" height="auto" alt="Cost-effective delivery sustainability">
                         </div>
                         <div class="col-6 centervertical">
-                            <h3 style="color: #ffffff" class="heading">
+                            <h3 class="heading">
                                 Handhole cut-outs
                             </h3>
                         </div>
                         <div class="col-1"></div>
                     </div>
-                    <div id="slide14" style="background-image: url('img/home-banner-2.4.svg'); background-position: center; background-size: cover; background-repeat: no-repeat; padding: 10px;" class="container-sml flex">
+                    <div id="slide14" class="container-sml flex">
                         <div class="col-1"></div>
                         <div class="col-4 centervertical">
                             <img src="img/strenghth.svg" width="100px" height="auto" alt="Supreme Strength and Stability">
                         </div>
                         <div class="col-6 centervertical">
-                            <h3 style="color: #ffffff" class="heading">
+                            <h3 class="heading">
                                 Strength and Stability
                             </h3>
                         </div>
                         <div class="col-1"></div>
                     </div>
-                    <div id="slide15" style="background-image: url('img/home-banner-2.5.svg'); background-position: center; background-size: cover; background-repeat: no-repeat; padding: 10px;" class="row container-sml flex">
+                    <div id="slide15" class="row container-sml flex">
                         <div class="col-1"></div>
                         <div class="col-4 centervertical">
                             <img src="img/pressure.svg" width="120px" height="auto" alt="High-resistance to pressure">
                         </div>
                         <div class="col-6 centervertical">
-                            <h3 style="color: #ffffff" class="heading">
+                            <h3 class="heading">
                                 High-resistance to pressure
                             </h3>
                         </div>
                         <div class="col-1"></div>
                     </div>
-                    <div id="slide16" style="background-image: url('img/home-banner-2.6.svg'); background-position: center; background-size: cover; background-repeat: no-repeat; padding: 10px;" class="row container-sml flex">
+                    <div id="slide16" class="row container-sml flex">
                         <div class="col-1"></div>
                         <div class="col-4 centervertical">
                             <img src="img/smooth-outer.svg" width="120px" height="auto" alt="Smooth outer surface">
                         </div>
                         <div class="col-6 centervertical">
-                            <h3 style="color: #ffffff" class="heading">
+                            <h3 class="heading">
                                 Smooth outer surface
                             </h3>
                         </div>
@@ -250,7 +245,7 @@ Indmark Paperform has devised an innovative packing solution through our Square 
     </header>
 
 
-    <div style="background-color: #63b32e" class="footer">
+    <div style="background-color: #63b32e; color: #112131" class="footer">
         <div class="container-sml flex text-center">
             <div class="col-12">
                 <h3 class="heading">
