--- a/client-ind/logistics.html
+++ b/client-ind/logistics.html
@@ -34,7 +34,7 @@
         </div>
         <div class="spacer" style="width: auto; height: 100px;"></div>
 
-        <div id="slide-show-3" class="feature-5 container-lrg" style="background: #112131; color: #63b32e;">
+        <div id="slide-show-3" class="feature-5 container-lrg" style="background: #112131; color: #63b32e !important; text-decoration: underline;">
             <div class="spacer" style="width: auto; height: 100px;"></div>
             <div class="owl-carousel owl-theme">
                 <div id="slide1" class="container-sml flex">
@@ -86,7 +86,7 @@
             </div>
         </div>
 
-        <div id="" class="container-sml flex feature5">
+        <div id="section02" class="container-sml flex feature5" style="color: #112131">
             <div class="row">
                 <div class="col-12 centervertical">
                     <h1 class="subheading text-center">
@@ -106,7 +106,7 @@
             </div>
         </div>
 
-        <div id="section3" class="feature5" style="background: #112131; color: #63b32e">
+        <div id="section3" class="feature5" style="background: #112131; color: #63b32e !important;">
             <div class="spacer" style="width: auto; height: 60px;"></div>
             <div class="container-sml flex">
                 <div style="display: block; text-align: center;" class="col-6">
@@ -135,7 +135,7 @@
         </div>
 
 
-        <div style="background-color: #63b32e" class="footer">
+        <div style="background-color: #63b32e; color: #112131" class="footer">
             <div class="container-sml flex text-center">
                 <div class="col-12">
                     <h3 class="heading">Save Space, Save Earth with Indmark's Eco-Friendly Packaging</h3>
