--- a/client-ind/environment.html
+++ b/client-ind/environment.html
@@ -35,17 +35,17 @@
         <div id="sectionEnv" class="feature5" style="background: #112131; color: #63b32e">
             <div class="container-sml flex">
                 <div style="display: block; text-align: center;" class="col-12">
-                    <div class="animated rotateIn"><img src="img/recyclable.svg" width="auto" height="160px" alt="50% more storage"></div>
+                    <div class="animated infinite rotateIn"><img src="img/recyclable.svg" width="auto" height="160px" alt="50% more storage"></div>
                     <h3 class="subheading">100% Recyclable</h3>
                 </div>
             </div>
             <div class="container-sml flex">
                 <div style="display: block; text-align: center;" class="col-6">
-                    <div class="animated rotateIn"><img src="img/biodegradable.svg" width="auto" height="160px" alt="Save up to 40% on freight"></div>
+                    <div class="animated infinite rotateIn"><img src="img/biodegradable.svg" width="auto" height="160px" alt="Save up to 40% on freight"></div>
                     <h3 class="subheading">100% bio-degradable</h3>
                 </div>
                 <div style="display: block; text-align: center;" class="col-6">
-                    <div class="animated rotateIn"><img src="img/trouble-free-recycling.svg" width="auto" height="160px" alt="Form a compressed storage"></div>
+                    <div class="animated infinite rotateIn"><img src="img/trouble-free-recycling.svg" width="auto" height="160px" alt="Form a compressed storage"></div>
                     <h3 class="subheading">Trouble-free recycling</h3>
                 </div>
             </div>
@@ -57,14 +57,13 @@
 
 
         <div id="sustanability" class="container-lrg flex feature5">
-
             <div class="row">
                 <div class="col-12 centervertical">
                     <div style="display: block; text-align: center;">
                         <img src="img/sustain.png" width="360px" height="auto" alt="Sustainbility">
                     </div>
                 </div>
-                <div style="color: #63b32e" class="col-12 centervertical">
+                <div style="color: #112131" class="col-12 centervertical">
                     <h3 class="heading text-center">Reduce. Reuse. Recycle.</h3>
                     <div class="paragraph">
                         <p>Sustainable packaging is crucial because it reduces the ecological footprint of all the stages in the product's life-cycle. It helps both the producer and the consumer reduce their environmental impact. Only by manufacturing packaging that is fully sustainable can we achieve the twin goals of providing a product that performs the task for which it is designed, but at the same time avoids having any form of negative impact on the environment. Indmark’s Fiber Square Drums represent an essential development in this regard.</br>
@@ -75,17 +74,15 @@
                         </p>
                     </div>
                 </div>
-                <div>
-                    <div class="col-12 centervertical animated pulse">
-                        <img src="img/green-trees.svg" width="100%" height="auto" alt="Green Trees">
-                    </div>
-                </div>
             </div>
+        </div>
+        <div class="col-12 animated pulse">
+            <img src="img/trees.svg" width="100%" height="auto" alt="Green Trees">
         </div>
 
 
 
-        <div style="background-color: #63b32e" class="footer">
+        <div style="background-color: #63b32e; color: #112131" class="footer">
             <div class="container-sml flex text-center">
                 <div class="col-12">
                     <h3 class="heading">Save Space, Save Earth with Indmark's Eco-Friendly Packaging</h3>
